# LHZ-Demo

./: .gitignore  README.md  pyproject.toml
examples/: architecture_demo.py  error_tolerance_demo.py  maxcut_demo.py
lhz/: __init__.py  architecture.py  error_analysis.py  optimizer.py
tests/: test_architecture.py  test_optimizer.py
